--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 repositories {
+//    flatDir {
+//        dirs ''
+//    }
     mavenLocal()
     mavenCentral()
     jcenter()
@@ -14,9 +17,9 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.spockframework:spock-core:1.1-groovy-2.4'
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.5'
+    gradleVersion = '4.0'
 }
